# private-residential-property-transaction

./: .gitignore  README.md  app.py  db.py  enriched_schema.sql  load_district_data.py  load_enriched_data.py  pyproject.toml  requirements.txt  ura_refresh.py
archive/: logging_config.json  utils.py
archive/poc/: app.py  github-ci.yml
archive/poc/templates/: base.html
data/: trxn_cnt_by_datetime.csv  trxn_cnt_by_district.csv
house-env/: pyvenv.cfg
mappings/: district_data_mappings.json  enriched_data_mappings.json  postal_district_mapping.py  ura_data_mappings.json
utils/: mongo.py  ura_utils.py
